Add google chrome for headless chrome driver.

--- a/baker.yml
+++ b/baker.yml
@@ -6,3 +6,7 @@ lang:
   - java8
 tools:
   - maven
+packages:
+  - apt:
+    - google-chrome-stable:
+        deb: https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
